# polars-hs

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  Setup.hs  package.yaml  polars-hs.cabal  stack.yaml
.github/workflows/: ci.yml
app/: Main.hs
docs/superpowers/plans/: 2026-04-27-polars-hs-binding-mvp.md  2026-04-27-polars-hs-column-extraction.md  2026-04-27-polars-hs-groupby-agg.md  2026-04-27-polars-hs-join.md  2026-04-27-polars-hs-series-append-shift.md  2026-04-27-polars-hs-series-handle.md  2026-04-27-polars-hs-series-transform.md  2026-04-28-polars-hs-arrow-c-data-export.md  2026-04-28-polars-hs-arrow-c-data-import.md  2026-04-28-polars-hs-construction.md  2026-04-28-polars-hs-dataset-driven-testing.md  2026-04-28-polars-hs-expression-dsl-core.md
docs/superpowers/research/: 2026-04-27-hs-bindgen-cargo-cabal-investigation.md
examples/: columns.hs  construction.hs  groupby.hs  iris.hs  join.hs  series.hs
include/: polars_hs.h
rust/polars-hs-ffi/: Cargo.toml  build.rs  cbindgen.toml
rust/polars-hs-ffi/src/: arrow.rs  bytes.rs  dataframe.rs  error.rs  expr.rs  handles.rs  ipc.rs  lazyframe.rs  lib.rs  series.rs
scripts/: generate_dataset_fixtures.py  run-nyc-taxi-test.sh
src/: Polars.hs
src/Polars/: Arrow.hs  Column.hs  DataFrame.hs  Error.hs  Expr.hs  GroupBy.hs  IPC.hs  Join.hs  LazyFrame.hs  Operators.hs  Schema.hs  Series.hs
src/Polars/Internal/: Bytes.hs  CString.hs  (+7 more)
test/: ArrowRecordBatch.hs  NYCTaxi.hs  Spec.hs
test/cbits/: arrow_record_batch.c
test/data/: departments.csv  employees.csv  people.csv  sales.csv  values.csv
(+14 files in other folders)
