[package]
name = "polars-hs-ffi"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
publish = false

[lib]
name = "polars_hs_ffi"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2"
polars = { version = "0.53.0", default-features = false, features = ["lazy", "csv", "parquet", "ipc", "fmt", "dtype-slim", "strings", "temporal"] }

[build-dependencies]
cbindgen = "0.29"
